[gd_scene load_steps=14 format=2]

[ext_resource path="res://Level.tres" type="TileSet" id=1]
[ext_resource path="res://LeftoverStaticPieceMap.gd" type="Script" id=2]
[ext_resource path="res://Target_templates.tres" type="TileSet" id=3]
[ext_resource path="res://MovingShapes.gd" type="Script" id=4]
[ext_resource path="res://Shapes.gd" type="Script" id=5]
[ext_resource path="res://StaticMap.gd" type="Script" id=6]
[ext_resource path="res://Score.gd" type="Script" id=7]
[ext_resource path="res://AudioStreamPlayer2D.gd" type="Script" id=8]
[ext_resource path="res://assets/Audio/Casual Arcade Track #3 (looped).wav" type="AudioStream" id=9]
[ext_resource path="res://menu/button_active.tres" type="StyleBox" id=10]
[ext_resource path="res://back_to_menu.gd" type="Script" id=11]
[ext_resource path="res://StaticActionButton.gd" type="Script" id=12]
[ext_resource path="res://menu/button.tres" type="StyleBox" id=13]

[node name="level" type="Node2D"]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="StaticMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_y_sort = true
compatibility_mode = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 13, 1, 0, 65536, 1, 0, 65549, 1, 0, 131072, 1, 0, 131085, 1, 0, 196608, 1, 0, 196621, 1, 0, 262144, 1, 0, 262157, 1, 0, 327680, 1, 0, 327693, 1, 0, 393216, 1, 0, 393229, 1, 0, 458752, 1, 0, 458765, 1, 0, 524288, 1, 0, 524301, 1, 0, 589824, 1, 0, 589837, 1, 0, 655360, 1, 0, 655373, 1, 0, 720896, 1, 0, 720909, 1, 0, 786432, 1, 0, 786445, 1, 0, 851968, 1, 0, 851981, 1, 0, 917504, 1, 0, 917517, 1, 0, 983040, 1, 0, 983053, 1, 0, 1048576, 1, 0, 1048589, 1, 0, 1114112, 1, 0, 1114125, 1, 0, 1179648, 1, 0, 1179661, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0 )
script = ExtResource( 6 )
FallingMap = NodePath("../../level/FallingMap")
Score = NodePath("../../level/Score")

[node name="Templates" type="Node2D" parent="StaticMap"]
visible = false
script = ExtResource( 5 )

[node name="1" type="TileMap" parent="StaticMap/Templates"]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1114117, 1, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 1, 0, 1179653, 1, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 1, 0 )

[node name="3" type="TileMap" parent="StaticMap/Templates"]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 1, 0, 1048586, 1, 0, 1048587, 2, 0, 1048588, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 1, 0, 1114122, 1, 0, 1114123, 2, 0, 1114124, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 1, 0, 1179658, 1, 0, 1179659, 2, 0, 1179660, 2, 0 )

[node name="2" type="TileMap" parent="StaticMap/Templates"]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 851973, 1, 0, 851974, 2, 0, 851975, 2, 0, 851976, 1, 0, 917509, 1, 0, 917510, 2, 0, 917511, 2, 0, 917512, 1, 0, 983045, 1, 0, 983046, 2, 0, 983047, 2, 0, 983048, 1, 0, 1048581, 1, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 1, 0, 1114117, 1, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 1, 0, 1179653, 1, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 1, 0 )

[node name="4" type="TileMap" parent="StaticMap/Templates"]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 851972, 1, 0, 851973, 1, 0, 917508, 1, 0, 917509, 2, 0, 917510, 1, 0, 983044, 1, 0, 983045, 2, 0, 983046, 2, 0, 983047, 1, 0, 1048580, 1, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114123, 1, 0, 1114124, 2, 0, 1179659, 1, 0, 1179660, 2, 0 )

[node name="5" type="TileMap" parent="StaticMap/Templates"]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 720899, 1, 0, 720900, 2, 0, 720901, 2, 0, 720902, 1, 0, 720903, 1, 0, 720904, 2, 0, 720905, 2, 0, 720906, 1, 0, 786435, 1, 0, 786436, 2, 0, 786437, 2, 0, 786438, 1, 0, 786439, 1, 0, 786440, 2, 0, 786441, 2, 0, 786442, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1114116, 1, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0 )

[node name="6" type="TileMap" parent="StaticMap/Templates"]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 655364, 1, 0, 655365, 1, 0, 655368, 1, 0, 655369, 1, 0, 720899, 1, 0, 720900, 2, 0, 720901, 2, 0, 720902, 1, 0, 720903, 1, 0, 720904, 2, 0, 720905, 2, 0, 720906, 1, 0, 786435, 1, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 1, 0, 851971, 1, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 1, 0, 917507, 1, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 1, 0, 983044, 1, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 1, 0, 1048581, 1, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 1, 0, 1114118, 1, 0, 1114119, 1, 0 )

[node name="ShapeOverlay" type="TileMap" parent="StaticMap"]
modulate = Color( 1, 1, 1, 0.501961 )
z_index = 10
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Frame" type="TileMap" parent="StaticMap"]
visible = false
z_index = 10
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 13, 1, 0, 65536, 1, 0, 65549, 1, 0, 131072, 1, 0, 131085, 1, 0, 196608, 1, 0, 196621, 1, 0, 262144, 1, 0, 262157, 1, 0, 327680, 1, 0, 327693, 1, 0, 393216, 1, 0, 393229, 1, 0, 458752, 1, 0, 458765, 1, 0, 524288, 1, 0, 524301, 1, 0, 589824, 1, 0, 589837, 1, 0, 655360, 1, 0, 655373, 1, 0, 720896, 1, 0, 720909, 1, 0, 786432, 1, 0, 786445, 1, 0, 851968, 1, 0, 851981, 1, 0, 917504, 1, 0, 917517, 1, 0, 983040, 1, 0, 983053, 1, 0, 1048576, 1, 0, 1048589, 1, 0, 1114112, 1, 0, 1114125, 1, 0, 1179648, 1, 0, 1179661, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0 )

[node name="LeftoverStaticPieceMap" type="TileMap" parent="StaticMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 2 )
StaticMap = NodePath("../../../level/StaticMap")

[node name="FallingMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 4 )
StaticMap = NodePath("../../level/StaticMap")

[node name="Shapes" type="Node2D" parent="FallingMap"]
visible = false
position = Vector2( 951.895, -85.7714 )
script = ExtResource( 5 )

[node name="ZLeft" type="Node2D" parent="FallingMap/Shapes"]
position = Vector2( -69, -170 )
script = ExtResource( 5 )

[node name="1" type="TileMap" parent="FallingMap/Shapes/ZLeft"]
position = Vector2( -11.2062, -2.23199 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 65536, 6, 0, 65537, 6, 0, 131073, 6, 0 )

[node name="2" type="TileMap" parent="FallingMap/Shapes/ZLeft"]
position = Vector2( 110.321, -0.0561218 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 6, 0, 2, 6, 0, 65536, 6, 0, 65537, 6, 0 )

[node name="ZRight" type="Node2D" parent="FallingMap/Shapes"]
position = Vector2( -53, -166 )
script = ExtResource( 5 )

[node name="3" type="TileMap" parent="FallingMap/Shapes/ZRight"]
position = Vector2( 208.484, -6.66324 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 5, 0, 65536, 5, 0, 65537, 5, 0, 131072, 5, 0 )

[node name="4" type="TileMap" parent="FallingMap/Shapes/ZRight"]
position = Vector2( 304.759, -5.71936 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 5, 0, 1, 5, 0, 65537, 5, 0, 65538, 5, 0 )

[node name="Square" type="Node2D" parent="FallingMap/Shapes"]
position = Vector2( 276, -154 )
script = ExtResource( 5 )

[node name="1" type="TileMap" parent="FallingMap/Shapes/Square"]
position = Vector2( 173.948, 9.89948 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 65536, 0, 0, 65537, 0, 0 )

[node name="Line" type="Node2D" parent="FallingMap/Shapes"]
position = Vector2( 628.225, -92.4406 )
script = ExtResource( 5 )

[node name="1" type="TileMap" parent="FallingMap/Shapes/Line"]
position = Vector2( 3.53906, 13.8628 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65536, 5, 0, 0, 5, 0, 65536, 5, 0, 131072, 5, 0 )

[node name="2" type="TileMap" parent="FallingMap/Shapes/Line"]
position = Vector2( 100.18, 11.6153 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 5, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0 )

[node name="LLeft" type="Node2D" parent="FallingMap/Shapes"]
script = ExtResource( 5 )

[node name="1" type="TileMap" parent="FallingMap/Shapes/LLeft"]
position = Vector2( 23.9465, 168.922 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 65537, 3, 0, 131073, 3, 0 )

[node name="2" type="TileMap" parent="FallingMap/Shapes/LLeft"]
position = Vector2( 131.581, 171.445 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 2, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0 )

[node name="3" type="TileMap" parent="FallingMap/Shapes/LLeft"]
position = Vector2( 267.807, 173.126 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 65536, 3, 0, 131072, 3, 0, 131073, 3, 0 )

[node name="4" type="TileMap" parent="FallingMap/Shapes/LLeft"]
position = Vector2( 361.146, 162.195 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 65536, 3, 0 )

[node name="LRight" type="Node2D" parent="FallingMap/Shapes"]
script = ExtResource( 5 )

[node name="1" type="TileMap" parent="FallingMap/Shapes/LRight"]
position = Vector2( 6.5694, 3.55438 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 1, 6, 0, 65536, 6, 0, 131072, 6, 0 )

[node name="2" type="TileMap" parent="FallingMap/Shapes/LRight"]
position = Vector2( 126.818, 3.55438 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 1, 6, 0, 2, 6, 0, 65538, 6, 0 )

[node name="3" type="TileMap" parent="FallingMap/Shapes/LRight"]
position = Vector2( 260.52, 2.71349 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 6, 0, 65537, 6, 0, 131072, 6, 0, 131073, 6, 0 )

[node name="4" type="TileMap" parent="FallingMap/Shapes/LRight"]
position = Vector2( 364.791, 5.23618 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0 )

[node name="T" type="Node2D" parent="FallingMap/Shapes"]
position = Vector2( -289.782, 660.199 )
script = ExtResource( 5 )

[node name="1" type="TileMap" parent="FallingMap/Shapes/T"]
position = Vector2( 364.791, 5.23618 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 65536, 3, 0, 65537, 3, 0, 131072, 3, 0 )

[node name="2" type="TileMap" parent="FallingMap/Shapes/T"]
position = Vector2( 356.747, 137.098 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 65537, 3, 0 )

[node name="3" type="TileMap" parent="FallingMap/Shapes/T"]
position = Vector2( 454.291, 4.23618 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 3, 0, 65536, 3, 0, 65537, 3, 0, 131073, 3, 0 )

[node name="4" type="TileMap" parent="FallingMap/Shapes/T"]
position = Vector2( 570.964, -1.42068 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0 )

[node name="DebugMap" type="TileMap" parent="FallingMap"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="input_timer" type="Timer" parent="FallingMap"]
wait_time = 0.1
autostart = true

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 458.424
margin_top = 54.8906
margin_right = 595.235
margin_bottom = 94.8906
text = "0 Points"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
script = ExtResource( 8 )

[node name="StaticActionButton" type="Button" parent="."]
margin_left = 457.967
margin_top = 267.197
margin_right = 584.967
margin_bottom = 301.197
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Clear level (T)"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
StaticMap = NodePath("../../level/StaticMap")
action = "reset"

[node name="Button2" type="Button" parent="."]
margin_left = 457.171
margin_top = 311.353
margin_right = 584.171
margin_bottom = 345.353
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Rotate piece (R)"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
StaticMap = NodePath("../../level/FallingMap")
action = "change_shape"

[node name="Button3" type="Button" parent="."]
margin_left = 448.762
margin_top = 353.398
margin_right = 593.762
margin_bottom = 387.398
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Clear shape (C)"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
StaticMap = NodePath("../../level/StaticMap")
action = "clear_single"

[node name="back_to_menu" type="Button" parent="."]
margin_left = 450.022
margin_top = 4.39987
margin_right = 595.022
margin_bottom = 38.3999
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back to menu"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="StaticMap" method="tick"]
[connection signal="timeout" from="Timer" to="StaticMap/LeftoverStaticPieceMap" method="tick"]
[connection signal="timeout" from="Timer" to="FallingMap" method="tick"]
[connection signal="fallen" from="StaticMap/LeftoverStaticPieceMap" to="StaticMap/LeftoverStaticPieceMap" method="_on_LeftoverStaticPieceMap_fallen"]
[connection signal="fallen" from="FallingMap" to="FallingMap" method="on_fallen"]
[connection signal="timeout" from="FallingMap/input_timer" to="FallingMap" method="input_loop"]
[connection signal="finished" from="Music" to="Music" method="_on_Music_finished"]
[connection signal="pressed" from="back_to_menu" to="back_to_menu" method="_on_back_to_menu_pressed"]
